--- a/WAVE/WAVE/WAVE.vcxproj
+++ b/WAVE/WAVE/WAVE.vcxproj
@@ -116,13 +116,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CObjAngleBullet.cpp" />
     <ClCompile Include="ObjBoss.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="ObjEnemyAmmunitionleft.cpp" />
     <ClCompile Include="ObjEnemyLongdistance.cpp" />
-    <ClCompile Include="ObjEnemyLongdistanceleft.cpp" />
-    <ClCompile Include="ObjEnemyRecoveryleft.cpp" />
     <ClCompile Include="CObjFullBullet.cpp" />
     <ClCompile Include="CObjDiffusionBullet.cpp" />
     <ClCompile Include="GameL\Audio.cpp" />
@@ -152,15 +150,8 @@
     <ClCompile Include="ObjEnemy.cpp" />
     <ClCompile Include="ObjEnemyAmmunition.cpp" />
     <ClCompile Include="ObjEnemyJump.cpp" />
-    <ClCompile Include="ObjEnemyJumpleft.cpp" />
-    <ClCompile Include="ObjEnemyleft.cpp" />
     <ClCompile Include="ObjEnemyRecovery.cpp" />
-    <ClCompile Include="ObjHero.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
-    </ClCompile>
-    <ClCompile Include="ObjGameOver.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
-    </ClCompile>
+    <ClCompile Include="ObjGameOver.cpp" />
     <ClCompile Include="ObjHero.cpp" />
     <ClCompile Include="ObjItem.cpp" />
     <ClCompile Include="ObjMain.cpp" />
@@ -176,14 +167,12 @@
     <ClCompile Include="UtilityModule.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CObjAngleBullet.h" />
     <ClInclude Include="CObjBullet.h" />
     <ClInclude Include="OBJBoss.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="ObjEnemyAmmunitionleft.h" />
     <ClInclude Include="ObjEnemyLongdistance.h" />
-    <ClInclude Include="ObjEnemyLongdistanceleft.h" />
-    <ClInclude Include="ObjEnemyRecoveryleft.h" />
     <ClInclude Include="CObjFullBullet.h" />
     <ClInclude Include="CObjDiffusionBullet.h" />
     <ClInclude Include="GameHead.h" />
@@ -200,8 +189,6 @@
     <ClInclude Include="GameL\WinInputs.h" />
     <ClInclude Include="ObjEnemyAmmunition.h" />
     <ClInclude Include="ObjEnemyJump.h" />
-    <ClInclude Include="ObjEnemyJumpleft.h" />
-    <ClInclude Include="ObjEnemyleft.h" />
     <ClInclude Include="COHomingBullet.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClInclude>
