--- a/WAVE/WAVE/WAVE.vcxproj.filters
+++ b/WAVE/WAVE/WAVE.vcxproj.filters
@@ -1,312 +1,98 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="GameL\Audio.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\DirectXDevice.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\Draw2DTex_Source.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\DrawFont.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\DrawTexture.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\GameL_Main.cpp">
-      <Filter>リソースファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\HitBoxManager.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjBackground.cpp">
-      <Filter>ソースファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\MultiThread.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="CObjBullet.cpp">
-      <Filter>ソースファイル\Bullet</Filter>
-    </ClCompile>
-    <ClCompile Include="CObjFullBullet.cpp">
-      <Filter>ソースファイル\Bullet</Filter>
-    </ClCompile>
-    <ClCompile Include="CObjDiffusionBullet.cpp">
-      <Filter>ソースファイル\Bullet</Filter>
-    </ClCompile>
-    <ClCompile Include="COHomingBullet.cpp">
-      <Filter>ソースファイル\Bullet</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjMain.cpp">
-      <Filter>ソースファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjTime.cpp">
-      <Filter>ソースファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneMain.cpp">
-      <Filter>リソースファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\SceneManager.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\SceneObjManager.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\SetWindow.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\UserData.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="UtilityModule.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="GameL\WinInputs.cpp">
-      <Filter>ヘッダーファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjClear.cpp">
-      <Filter>ソースファイル\Clear</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneClear.cpp">
-      <Filter>ソースファイル\Clear</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjGameOver.cpp">
-      <Filter>ソースファイル\GameOver</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneGameOver.cpp">
-      <Filter>ソースファイル\GameOver</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneTitle.cpp">
-      <Filter>ソースファイル\Title</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjTitle.cpp">
-      <Filter>ソースファイル\Title</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjBlock.cpp">
-      <Filter>ソースファイル\Block</Filter>
-    </ClCompile>
-    <ClCompile Include="SceneItem.cpp">
-      <Filter>ソースファイル\item</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjItem.cpp">
-      <Filter>ソースファイル\item</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjEnemy.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjEnemyAmmunition.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjEnemyAmmunitionleft.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjEnemyJump.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjEnemyJumpleft.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjEnemyleft.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjEnemyLongdistance.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjEnemyLongdistanceleft.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjEnemyRecovery.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjEnemyRecoveryleft.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjBoss.cpp">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjHero.cpp">
-      <Filter>ソースファイル\Hero</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjGrenade.cpp">
-      <Filter>ソースファイル\Gre</Filter>
-    </ClCompile>
-    <ClCompile Include="ObjGre.cpp">
-      <Filter>ソースファイル\Gre</Filter>
-    </ClCompile>
+    <ClCompile Include="ObjBoss.cpp" />
+    <ClCompile Include="ObjEnemyAmmunitionleft.cpp" />
+    <ClCompile Include="ObjEnemyLongdistance.cpp" />
+    <ClCompile Include="ObjEnemyLongdistanceleft.cpp" />
+    <ClCompile Include="ObjEnemyRecoveryleft.cpp" />
+    <ClCompile Include="CObjFullBullet.cpp" />
+    <ClCompile Include="CObjDiffusionBullet.cpp" />
+    <ClCompile Include="GameL\Audio.cpp" />
+    <ClCompile Include="GameL\DirectXDevice.cpp" />
+    <ClCompile Include="GameL\Draw2DTex_Source.cpp" />
+    <ClCompile Include="GameL\DrawFont.cpp" />
+    <ClCompile Include="GameL\DrawTexture.cpp" />
+    <ClCompile Include="GameL\GameL_Main.cpp" />
+    <ClCompile Include="GameL\HitBoxManager.cpp" />
+    <ClCompile Include="GameL\MultiThread.cpp" />
+    <ClCompile Include="GameL\SceneManager.cpp" />
+    <ClCompile Include="GameL\SceneObjManager.cpp" />
+    <ClCompile Include="GameL\SetWindow.cpp" />
+    <ClCompile Include="GameL\UserData.cpp" />
+    <ClCompile Include="GameL\WinInputs.cpp" />
+    <ClCompile Include="CObjBullet.cpp" />
+    <ClCompile Include="COHomingBullet.cpp" />
+    <ClCompile Include="ObjBackground.cpp" />
+    <ClCompile Include="ObjBlock.cpp" />
+    <ClCompile Include="ObjClear.cpp" />
+    <ClCompile Include="ObjEnemy.cpp" />
+    <ClCompile Include="ObjEnemyAmmunition.cpp" />
+    <ClCompile Include="ObjEnemyJump.cpp" />
+    <ClCompile Include="ObjEnemyJumpleft.cpp" />
+    <ClCompile Include="ObjEnemyleft.cpp" />
+    <ClCompile Include="ObjEnemyRecovery.cpp" />
+    <ClCompile Include="ObjGre.cpp" />
+    <ClCompile Include="ObjGrenade.cpp" />
+    <ClCompile Include="ObjHero.cpp" />
+    <ClCompile Include="ObjGameOver.cpp" />
+    <ClCompile Include="ObjItem.cpp" />
+    <ClCompile Include="ObjMain.cpp" />
+    <ClCompile Include="ObjTime.cpp" />
+    <ClCompile Include="SceneClear.cpp" />
+    <ClCompile Include="SceneGameOver.cpp" />
+    <ClCompile Include="SceneItem.cpp" />
+    <ClCompile Include="SceneMain.cpp" />
+    <ClCompile Include="ObjTitle.cpp" />
+    <ClCompile Include="SceneTitle.cpp" />
+    <ClCompile Include="UtilityModule.cpp" />
+    <ClCompile Include="CObjAngleBullet.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GameL\Audio.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameL\DirectXDevice.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameL\DrawFont.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameL\DrawTexture.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameHead.h">
-      <Filter>リソースファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameL\HitBoxManager.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="main.h">
-      <Filter>リソースファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameL\MultiThread.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjBackground.h">
-      <Filter>ソースファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="CObjBullet.h">
-      <Filter>ソースファイル\Bullet</Filter>
-    </ClInclude>
-    <ClInclude Include="CObjFullBullet.h">
-      <Filter>ソースファイル\Bullet</Filter>
-    </ClInclude>
-    <ClInclude Include="CObjDiffusionBullet.h">
-      <Filter>ソースファイル\Bullet</Filter>
-    </ClInclude>
-    <ClInclude Include="COHomingBullet.h">
-      <Filter>ソースファイル\Bullet</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjMain.h">
-      <Filter>ソースファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjTime.h">
-      <Filter>ソースファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneMain.h">
-      <Filter>リソースファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameL\SceneManager.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameL\SceneObjManager.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameL\SetWindow.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameL\UserData.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="UtilityModule.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="GameL\WinInputs.h">
-      <Filter>ヘッダーファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjClear.h">
-      <Filter>ソースファイル\Clear</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneClear.h">
-      <Filter>ソースファイル\Clear</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneGameOver.h">
-      <Filter>ソースファイル\GameOver</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjGrenade.h">
-      <Filter>ソースファイル\Gre</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneTitle.h">
-      <Filter>ソースファイル\Title</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjTitle.h">
-      <Filter>ソースファイル\Title</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjBlock.h">
-      <Filter>ソースファイル\Block</Filter>
-    </ClInclude>
-    <ClInclude Include="SceneItem.h">
-      <Filter>ソースファイル\item</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjItem.h">
-      <Filter>ソースファイル\item</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjEnemy.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjEnemyAmmunition.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjEnemyAmmunitionleft.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjEnemyJump.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjEnemyJumpleft.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjEnemyleft.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjEnemyLongdistance.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjEnemyLongdistanceleft.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjEnemyRecovery.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjEnemyRecoveryleft.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="OBJBoss.h">
-      <Filter>ソースファイル\Enemy</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjHero.h">
-      <Filter>ソースファイル\Hero</Filter>
-    </ClInclude>
-    <ClInclude Include="ObjGre.h">
-      <Filter>ソースファイル\Gre</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="ソースファイル">
-      <UniqueIdentifier>{89190daa-5d68-4510-8062-fb3f68e74350}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソースファイル\Bullet">
-      <UniqueIdentifier>{5447bde8-1c2b-400d-87ed-1c28dce5da05}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="リソースファイル">
-      <UniqueIdentifier>{61bbb519-77af-4d83-a7f6-3c616391e579}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソースファイル\Clear">
-      <UniqueIdentifier>{3e4f667f-5e2c-4802-8df8-30f25223da82}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソースファイル\GameOver">
-      <UniqueIdentifier>{47cf5302-a23e-4760-a2e9-54a1b89f30fd}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソースファイル\Gre">
-      <UniqueIdentifier>{4cdb7197-1e60-418d-9f8d-515c2c753fe9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソースファイル\Title">
-      <UniqueIdentifier>{4b28f4e3-05b9-402d-8404-f908b7cd4714}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソースファイル\Block">
-      <UniqueIdentifier>{d1772ca2-7200-4c2f-b088-0283e3a3a0f6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソースファイル\item">
-      <UniqueIdentifier>{121c8a8d-3c09-4af5-818d-051b9bfcd588}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソースファイル\Enemy">
-      <UniqueIdentifier>{49fab4f8-e981-4d65-9e9b-b84ec1f6dcf3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ソースファイル\Hero">
-      <UniqueIdentifier>{49591f59-c0bb-46c3-b26f-254739c5019d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ヘッダーファイル">
-      <UniqueIdentifier>{94be50a8-62ff-454a-9125-1c4b781c421c}</UniqueIdentifier>
-    </Filter>
+    <ClInclude Include="CObjBullet.h" />
+    <ClInclude Include="OBJBoss.h" />
+    <ClInclude Include="ObjEnemyAmmunitionleft.h" />
+    <ClInclude Include="ObjEnemyLongdistance.h" />
+    <ClInclude Include="ObjEnemyLongdistanceleft.h" />
+    <ClInclude Include="ObjEnemyRecoveryleft.h" />
+    <ClInclude Include="CObjFullBullet.h" />
+    <ClInclude Include="CObjDiffusionBullet.h" />
+    <ClInclude Include="GameHead.h" />
+    <ClInclude Include="GameL\Audio.h" />
+    <ClInclude Include="GameL\DirectXDevice.h" />
+    <ClInclude Include="GameL\DrawFont.h" />
+    <ClInclude Include="GameL\DrawTexture.h" />
+    <ClInclude Include="GameL\HitBoxManager.h" />
+    <ClInclude Include="GameL\MultiThread.h" />
+    <ClInclude Include="GameL\SceneManager.h" />
+    <ClInclude Include="GameL\SceneObjManager.h" />
+    <ClInclude Include="GameL\SetWindow.h" />
+    <ClInclude Include="GameL\UserData.h" />
+    <ClInclude Include="GameL\WinInputs.h" />
+    <ClInclude Include="ObjEnemyAmmunition.h" />
+    <ClInclude Include="ObjEnemyJump.h" />
+    <ClInclude Include="ObjEnemyJumpleft.h" />
+    <ClInclude Include="ObjEnemyleft.h" />
+    <ClInclude Include="COHomingBullet.h" />
+    <ClInclude Include="main.h" />
+    <ClInclude Include="ObjBackground.h" />
+    <ClInclude Include="ObjBlock.h" />
+    <ClInclude Include="ObjClear.h" />
+    <ClInclude Include="ObjEnemy.h" />
+    <ClInclude Include="ObjEnemyRecovery.h" />
+    <ClInclude Include="ObjGre.h" />
+    <ClInclude Include="ObjHero.h" />
+    <ClInclude Include="ObjItem.h" />
+    <ClInclude Include="ObjMain.h" />
+    <ClInclude Include="ObjGrenade.h" />
+    <ClInclude Include="ObjTime.h" />
+    <ClInclude Include="SceneClear.h" />
+    <ClInclude Include="SceneGameOver.h" />
+    <ClInclude Include="SceneItem.h" />
+    <ClInclude Include="SceneMain.h" />
+    <ClInclude Include="ObjTitle.h" />
+    <ClInclude Include="SceneTitle.h" />
+    <ClInclude Include="UtilityModule.h" />
+    <ClInclude Include="CObjAngleBullet.h" />
   </ItemGroup>
 </Project>
